--- a/08_index.html
+++ b/08_index.html
@@ -76,7 +76,7 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-12" data-aos="fade-up">
-            <h2>08: CNC milling, molding and casting</h2>
+            <h2>08: CNC milling, casting and molding</h2>
             <p>This week's assignments were a struggle for so many reasons. So, this is more of a documentation of my various failures...but hey, at least I learned a lot from them!</p>
           </div>
         </div>
@@ -129,8 +129,8 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
-            <p>I did another print but it turned out too small. I also ran into several issues with the end mill falling out and the mill stopping halfway through so I had to restart several times. I also felt like the ridges were a bit too obvious with the 1/8" end mill so I tried switching to a 1/16" end mill. However, the end mill got jammed partway through and the machine stopped. I'm assuming this was either because the end mill couldn't go deep enough or there was something about the shape of my model that didn't work with the 1/16" bit. I ultimately ended up switching back to the 1/8" bit which was fine when I scaled the model up a bit.</p>
-            <p>Another issue I encounted was that the pegs/divots were too close to the edge of the box. It didn't appear that way in Fusion 360 but when it was milled, they were touching the edge of the box. Some of the divots also didn't show up. So, I repositioned the pegs/divots and increased the depth of the divots - it kind of worked.</p>
+            <p>I did another print after this but it turned out too small. I also ran into several issues with the end mill falling out and the mill stopping halfway through so I had to restart several times. I also felt like the ridges were a bit too obvious with the 1/8" end mill so I tried switching to a 1/16" end mill. However, the end mill got jammed partway through and the machine stopped. I'm assuming this was either because the end mill couldn't go deep enough or there was something about the shape of my model that didn't work with the 1/16" bit. I ultimately ended up switching back to the 1/8" bit which was fine when I scaled the model up a bit.</p>
+            <p>Another issue I encountered was that the pegs/divots were too close to the edge of the box. It didn't appear that way in Fusion 360 but when it was milled, they were touching the edge of the box. Some of the divots also didn't show up. So, I repositioned the pegs/divots and increased the depth of the divots - it kind of worked.</p>
             <p>Because I wasn't 100% confident that the milled mold would work, I also 3D printed the mold just in case.</p>
           </div>
          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
@@ -164,7 +164,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
-            <p>The next morning, I went back to the labs to take out the molds - they worked! But wait...ㅅurns out, I did the model incorrectly. I mirrored the pegs/divots, assuming I was supposed to if I were to put two halves of the molds together. What I really needed to do was to keep the pegs/divots in the same position and instead mirror the shiba. nooooooooooooooooooo...................asd;fljkfa;ldkjakds</p>
+            <p>The next morning, I went back to the labs to take out the molds - they worked! But wait...turns out, I did the model incorrectly. I mirrored the pegs/divots, assuming I was supposed to if I were to put two halves of the molds together. What I really needed to do was to keep the pegs/divots in the same position and instead mirror the shiba. nooooooooooooooooooo...................asd;fljkfa;ldkjakds</p>
           </div>
          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="08_CNC/shiba_mold3.jpg" alt="Image" class="img-fluid">
@@ -182,15 +182,25 @@
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
             <p>But one must not give up that easily! I chatted with Nathan and he suggested that instead of using the divots, I could try creating a "lip" so that one mold would fit into the other mold. So remade the models and tried that...</p>
             <p>Unfortunately, I messed up the first print (another 3 hours gone *cries*). I sized the boxes so that one would be larger than the other, but when I poured in the mold material, I realized that I also needed to extrude part of the box to actually create the "lip"...lol. It wasn't the biggest deal since I would still be able to put the two molds together, but I was a bit afraid that since it wasn't watertight, the casting material would leak out. So, I adjusted the model to account for the "lip" and 3D printed it (which, of course, failed halfway through...)</p>
-            <p>In the meantime, I added the mold material anyways, just in case the 3D failed again or I somehow messed up the model again. I used SORTA-Clear™ 37, which is a food safe translucent silicone rubber. I guess now I can make chopstick holders that are also edible...?</p>
           </div>
-         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+         <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="08_CNC/shiba_fusion2.jpg" alt="Image" class="img-fluid">
           </div>
-         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <center><iframe src="https://mymde20.autodesk360.com/shares/public/SH35dfcQT936092f0e437a15c8d3daff1f79?mode=embed" width="600" height="400" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe></center>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p>In the meantime, I added the mold material anyways, just in case the 3D failed again or I somehow messed up the model again. I used SORTA-Clear™ 37, which is a food safe translucent silicone rubber. I guess now I can make chopstick holders that are also edible...?</p>
+          </div>
+         <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="08_CNC/shiba_mold5.jpg" alt="Image" class="img-fluid">
           </div>
-         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+         <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="08_CNC/shiba_mold6.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
@@ -199,15 +209,28 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
-            <p><center>SHIBA SAGA TO BE CONTINUED...</center></p>
+            <p>I let the molds cure overnight and for most of the day. They turned out well and the two pieces fit together - yay! I thought it was fairly watertight but taped the two molds together just to be safe. However, when I tried casting them with plaster, I noticed that the mixture wasn't getting into the undercutted parts (namely the ears and legs). I tried shaking the mold gently but that was a mistake - the plaster leaked out :( Because I was wearing gloves and the process was a mess, I wasn't able to get photos.</p>
+            <p>I let the molds cure overnight and for most of the day. They turned out well and the two pieces fit together perfectly - yay! I thought it was fairly watertight but taped the two molds together just to be extra safe. Then, I injected a plaster mixture (using a ratio of 100:65 plaster/water) using a syringe into one of the holes I created at the bottom of the mold (the second hole is to help release air pockets).</p>
+            <p>I noticed that the mixture wasn't getting into the undercutted parts (namely the ears and legs). I tried shaking the mold gently but that was a mistake - the plaster leaked out :( Because I was wearing gloves and the process was a mess, I wasn't able to get photos.</p>
+            <p>In my second attempt, I tried injecting some plaster into the ears and legs first, and then quickly put one half of the mold onto the other. It almost worked, except the molds weren't perfectly aligned. When I tried to realign, the plaster leaked out again - ugh! I wiped off the leaked plaster around the shiba and by the time I was done, I noticed that the plaster in the ears and legs were starting to harden a bit. Instead of trying to take it out, I left it in, put the two molds back together, secured them with clamps, and injected the rest of the plaster. Then the waiting game began (again...)</p>
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_finalmold1.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_finalmold2.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_finalmold3.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
       </div>
 
+
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
-            <h3 class="h3">2. CNC Milling using ShopBot</h3>
+            <h3 class="h3">2. CNC milling using ShopBot</h3>
             <p>haha...the other epic struggle of the week! To be fair, I had a pretty ambitious design I wanted to mill so I definitely dug this hole for myself. The design had a lot of intricate details and I was told that this would not be possible...but of course I thought: "Challenge accepted!"</p>
             <p>I spent some time in Rhino removing some details from the file that I thought would be too difficult to cut, given that we were using a 1/8" end mill on the ShopBot. All the curves were closed and I was hoping to engrave the wood. However, when I tried creating pocket toolpaths in Aspire, I got error messages saying that the toolpath could not be created. Eventually, I gave up on the pocket cuts...unless I took out almost all the detail, it wasn't possible to create the toolpaths :(</p>
           </div>
@@ -261,9 +284,31 @@
           </div>
          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="08_CNC/bear_finalcut1.jpg" alt="Image" class="img-fluid">
+            <figcaption>RIGHT OUT OF THE MACHINE</figcaption>
           </div>
          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="08_CNC/bear_finalcut2.jpg" alt="Image" class="img-fluid">
+            <figcaption>AFTER CLEANING & SANDING</figcaption>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="container">
+        <div class="row mb-5 align-items-top">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <h3 class="h3">Key learnings</h3>
+          </div>
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <h4 class ="h4">Milling a mold, molding and casting</h4>
+            <li>CNC milling probably isn't the best way to create mold positives if your model is highly detailed.3D printing offers greater precision.</li>
+            <li>If you're going to make two half mold positives, make sure the two halves are mirrored in your STL file.</li>
+            <li>Don't use pegs/divots to align your molds. This may not work depending on what you're using to create the mold positive, as well as the mold material. Instead, creating a "lip" so that one half of the mold can fit into the other half securely.</li>
+
+          </div>
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <h4 class="h4">CNC milling using ShopBot</h4>
+            <li>Don't try milling anything too detailed with a 1/8" bit. That's probably a better job for a laser cutter.</li>
           </div>
         </div>
       </div>
