--- a/08_index.html
+++ b/08_index.html
@@ -226,6 +226,22 @@
         </div>
       </div>
 
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p>Here's the result! Unfortunately the legs didn't survive :( But the ears did! And it's in one piece! It also fits a pair of chopsticks :') I consider that a win.</p>
+            <p>But since I already put in so much time...I wanted to try and get this right. So I did one more cast (currently waiting for it to dry!) and hope to try casting it with metal as well (once we stock up on more). I'll consider this finished for now, but stay tuned for possible updates...</p>
+          </div>
+         <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_finalmold4.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-8" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_finalmold5.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+
 
       <div class="container">
         <div class="row mb-5 align-items-center">
