--- a/08_index.html
+++ b/08_index.html
@@ -209,10 +209,22 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p>In the meantime, I added the mold material anyways, just in case the 3D failed again or I somehow messed up the model again. I used SORTA-Clear™ 37, which is a food safe translucent silicone rubber. I guess now I can make chopstick holders that are also edible...?</p>
+          </div>
+         <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_mold5.jpg" alt="Image" class="img-fluid">
+          </div>
+         <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+            <img src="08_CNC/shiba_mold6.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
             <p>I let the molds cure overnight and for most of the day. They turned out well and the two pieces fit together - yay! I thought it was fairly watertight but taped the two molds together just to be safe. However, when I tried casting them with plaster, I noticed that the mixture wasn't getting into the undercutted parts (namely the ears and legs). I tried shaking the mold gently but that was a mistake - the plaster leaked out :( Because I was wearing gloves and the process was a mess, I wasn't able to get photos.</p>
-            <p>I let the molds cure overnight and for most of the day. They turned out well and the two pieces fit together perfectly - yay! I thought it was fairly watertight but taped the two molds together just to be extra safe. Then, I injected a plaster mixture (using a ratio of 100:65 plaster/water) using a syringe into one of the holes I created at the bottom of the mold (the second hole is to help release air pockets).</p>
-            <p>I noticed that the mixture wasn't getting into the undercutted parts (namely the ears and legs). I tried shaking the mold gently but that was a mistake - the plaster leaked out :( Because I was wearing gloves and the process was a mess, I wasn't able to get photos.</p>
-            <p>In my second attempt, I tried injecting some plaster into the ears and legs first, and then quickly put one half of the mold onto the other. It almost worked, except the molds weren't perfectly aligned. When I tried to realign, the plaster leaked out again - ugh! I wiped off the leaked plaster around the shiba and by the time I was done, I noticed that the plaster in the ears and legs were starting to harden a bit. Instead of trying to take it out, I left it in, put the two molds back together, secured them with clamps, and injected the rest of the plaster. Then the waiting game began (again...)</p>
+            <p>In my second attempt, I tried injecting some plaster into the ears and legs first, and then quickly put one half of the mold onto the other. It almost worked, except the molds weren't perfectly aligned. When I tried to realign them, the plaster leaked out again - ugh! I wiped off the leaked plaster around the shiba and by the time I was done, I noticed that the plaster in the ears and legs were starting to cure already. Instead of removing it, I left it in, put the two molds back together, secured them with clamps, and injected the rest of the plaster. Then the waiting game began (again...)</p>
           </div>
          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
             <img src="08_CNC/shiba_finalmold1.jpg" alt="Image" class="img-fluid">
@@ -229,8 +241,8 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
-            <p>Here's the result! Unfortunately the legs didn't survive :( But the ears did! And it's in one piece! It also fits a pair of chopsticks :') I consider that a win.</p>
-            <p>But since I already put in so much time...I wanted to try and get this right. So I did one more cast (currently waiting for it to dry!) and hope to try casting it with metal as well (once we stock up on more). I'll consider this finished for now, but stay tuned for possible updates...</p>
+            <p>Here's the result! Unfortunately the legs didn't survive :( I think it might've been beauase the plaster in the legs were already semi-dry by the time I injected the rest of the plaster, and somehwo it didn't adhere together. That, or the legs were too thin/fragile and broke off easily when I was trying to take it out of the mold. But the ears survived! And most of the shiba is one piece! It also fits a pair of chopsticks :') I consider that a win.</p>
+            <p>But since I already put in so much time...I wanted to try and get this right. I did one more cast with the plaster (currently waiting for it to dry!) and hope to try casting it with metal as well (once we stock up on more). I'll consider this finished for now, but stay tuned for possible updates...</p>
           </div>
          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
             <img src="08_CNC/shiba_finalmold4.jpg" alt="Image" class="img-fluid">
