Week 8 (minor text updates)

--- a/08_index.html
+++ b/08_index.html
@@ -192,24 +192,11 @@
         </div>
       </div>
 
-      <div class="container">
-        <div class="row mb-5 align-items-center">
-          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
-            <p>In the meantime, I added the mold material anyways, just in case the 3D failed again or I somehow messed up the model again. I used SORTA-Clear™ 37, which is a food safe translucent silicone rubber. I guess now I can make chopstick holders that are also edible...?</p>
-          </div>
-         <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
-            <img src="08_CNC/shiba_mold5.jpg" alt="Image" class="img-fluid">
-          </div>
-         <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
-            <img src="08_CNC/shiba_mold6.jpg" alt="Image" class="img-fluid">
-          </div>
-        </div>
-      </div>
 
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
-            <p>In the meantime, I added the mold material anyways, just in case the 3D failed again or I somehow messed up the model again. I used SORTA-Clear™ 37, which is a food safe translucent silicone rubber. I guess now I can make chopstick holders that are also edible...?</p>
+            <p>I used SORTA-Clear™ 37, which is a food safe translucent silicone rubber since we ran out of the OOMOO®25. I guess now I can make chopstick holders that are also edible...?</p>
           </div>
          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <img src="08_CNC/shiba_mold5.jpg" alt="Image" class="img-fluid">
