--- a/08_index.html
+++ b/08_index.html
@@ -228,7 +228,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
-            <p>Here's the result! Unfortunately the legs didn't survive :( I think it might've been beauase the plaster in the legs were already semi-dry by the time I injected the rest of the plaster, and somehwo it didn't adhere together. That, or the legs were too thin/fragile and broke off easily when I was trying to take it out of the mold. But the ears survived! And most of the shiba is one piece! It also fits a pair of chopsticks :') I consider that a win.</p>
+            <p>Here's the result! Unfortunately the legs didn't survive :( I think it might've been beauase the plaster in the legs was already semi-dry by the time I injected the rest of the plaster, and somehow it didn't adhere together. That, or the legs were too thin/fragile and so they broke off easily. But the ears survived! And most of the shiba is one piece! It also fits a pair of chopsticks :') I consider that a win.</p>
             <p>But since I already put in so much time...I wanted to try and get this right. I did one more cast with the plaster (currently waiting for it to dry!) and hope to try casting it with metal as well (once we stock up on more). I'll consider this finished for now, but stay tuned for possible updates...</p>
           </div>
          <div class="col-md-4" data-aos="fade-up" data-aos-delay="50">
