--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </a>
           </div>
           <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
+            <a href="09_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>09: radio, wifi, bluetooth (IoT)</h3>
               </div>
