--- a/09_index.html
+++ b/09_index.html
@@ -24,6 +24,10 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/arduino-light.min.css" rel="stylesheet" >
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/arduino.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script> 
 
   <!-- =======================================================
   * Template Name: MyPortfolio - v4.9.0
@@ -122,6 +126,76 @@
             Your browser does not support the video tag.
             </video>
             <figcaption>Turn LED on/off by clicking "Turn On" or "Turn Off".</figcaption>
+          </div>
+        </div>
+      </div>
+
+   <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <h3 class="h3">3. ESP32 + Stepper Motor</h3>
+            <p>For our final project, we want to create a drawing machine that injects ink into water based on certain inputs. To start on the prototype, we 3D printed a syringe holder that is attached to a stepper motor. When the stepper motor runs, the holder depresses the plunger.</p>
+            <p>We followed <a href="https://randomnerdtutorials.com/esp32-stepper-motor-28byj-48-uln2003/">this tutorial</a> to connect the stepper motor to the ESP32 via an ULN2003 motor driver and powered it with an Arduino Uno that was connected to our laptop.</p>
+          </div>
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+            <img src="09_IoT/stepper_schematic.png" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50">
+            <b>ARDUINO CODE</b>
+            <pre><code class="language-arduino">
+/*
+  Rui Santos
+  Complete project details at https://RandomNerdTutorials.com/esp32-stepper-motor-28byj-48-uln2003/
+  
+  Permission is hereby granted, free of charge, to any person obtaining a copy
+  of this software and associated documentation files.
+  
+  The above copyright notice and this permission notice shall be included in all
+  copies or substantial portions of the Software.
+  
+  Based on Stepper Motor Control - one revolution by Tom Igoe
+*/
+
+#include "Stepper.h"
+
+const int stepsPerRevolution = 2048;  // change this to fit the number of steps per revolution
+
+// ULN2003 Motor Driver Pins
+#define IN1 19
+#define IN2 18
+#define IN3 10
+#define IN4 4
+
+// initialize the stepper library
+Stepper myStepper(stepsPerRevolution, IN1, IN3, IN2, IN4);
+
+void setup() {
+  // set the speed at 5 rpm
+  myStepper.setSpeed(5);
+  // initialize the serial port
+  Serial.begin(115200);
+}
+
+void loop() {
+  // step one revolution in one direction:
+  Serial.println("clockwise");
+  myStepper.step(stepsPerRevolution);
+  delay(1000);
+
+  // step one revolution in the other direction:
+  Serial.println("counterclockwise");
+  myStepper.step(-stepsPerRevolution);
+  delay(1000);
+}
+              </code>
+            </pre>
+        </div>
+      </div>
+
+   <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50" data-aos-delay="50">
+            <p>Finally, we tried to connect the the ESP32 and stepper motor to Firebase so that we could control the motor over Wifi. [Details to come...]</p>
           </div>
         </div>
       </div>
