--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
               <img class="img-fluid" src="08_CNC/thumbnail.jpg">
             </a>
           </div>
-          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="09_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>09: radio, wifi, bluetooth (IoT)</h3>
               </div>
-              <img class="img-fluid" src="comingsoon.png">
+              <img class="img-fluid" src="09_IoT/thumbnail.jpg">
             </a>
           </div>
           <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
