--- a/09_index.html
+++ b/09_index.html
@@ -213,7 +213,89 @@ void loop() {
             <figcaption>Turn stepper motor on/off by clicking the "Turn On" or "Turn Off" button. The syringe dispenser works!</figcaption>
           </div>
         </div>
+    </div>
+
+
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="50">
+            <b>ARDUINO CODE</b>
+            <pre><code class="language-arduino">
+#include "WiFi.h"                                // esp32 library
+#include "FirebaseESP32.h"                      // firebase library
+#include "Stepper.h"
+
+
+#define FIREBASE_HOST "https://ps70-week-9-default-rtdb.firebaseio.com/"  // the project name address from firebase id
+#define FIREBASE_AUTH "2eCvifu0nm6sZbEiz8NMaCrHV9wRS21cMwPCOcDF"    
+#define WIFI_SSID "MAKERSPACE"                                // input your home or public wifi name
+#define WIFI_PASSWORD "12345678"                            // password of wifi ssid
+
+// ULN2003 Motor Driver Pins
+#define IN1 19
+#define IN2 18
+#define IN3 10
+#define IN4 4
+
+
+String fireString = "";                                          received from firebase
+const int stepsPerRevolution = 2048;  // change this to fit the number of steps per revolution
+
+// initialize the stepper library
+Stepper myStepper(stepsPerRevolution, IN1, IN3, IN2, IN4);
+
+//Define FirebaseESP32 data object
+FirebaseData firebaseData;
+
+void setup() {
+  // set the speed at 5 rpm
+  myStepper.setSpeed(15);
+  // initialize the serial port
+  Serial.begin(115200);
+  WiFi.begin(WIFI_SSID, WIFI_PASSWORD);                          // try to connect with wifi
+
+  Serial.print("Connecting to ");
+  Serial.print(WIFI_SSID);
+  while (WiFi.status() != WL_CONNECTED) {
+    Serial.print(".");
+    delay(500);
+  }
+
+  Serial.println();
+  Serial.print("Connected to ");
+  Serial.println(WIFI_SSID);
+  Serial.print("IP Address is : ");
+  Serial.println(WiFi.localIP());                                // print local IP address
+  Firebase.begin(FIREBASE_HOST, FIREBASE_AUTH);                  // connect to firebase
+  Firebase.reconnectWiFi(true);
+  Firebase.set(firebaseData, "/STEPPER", "OFF");              // set initial string of "OFF"
+
+}
+
+void loop() {
+
+  Firebase.get(firebaseData, "/STEPPER");                     // get stepper status input from firebase
+  fireString = firebaseData.stringData();                        // change to e.g. intData() or boolData(
+
+  if (fireString == "ON") {                    // compare the input of stepper status received from firebase
+    Serial.println("Stepper Turned ON");
+    myStepper.step(-stepsPerRevolution);              // make output stepper
+    }
+
+  else if (fireString == "OFF") {              // compare the input of stepper status received from firebase
+    Serial.println("Stepper Turned OFF");
+    myStepper.step(0); 
+      }
+
+
+}
+              </code>
+            </pre>
+          </div>
+        </div>
       </div>
+
+
 
     </section>
 
