--- a/09_index.html
+++ b/09_index.html
@@ -207,7 +207,7 @@ void loop() {
           </div>
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
             <video width="600" controls>
-              <source src="09_IoT/stepper_UI.mp4" type="video/mp4">
+              <source src="09_IoT/stepper_ui.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video>
             <figcaption>Turn stepper motor on/off by clicking the "Turn On" or "Turn Off" button. The syringe dispenser works!</figcaption>
